updates photos text

--- a/villataika.fi/fi/photos.html
+++ b/villataika.fi/fi/photos.html
@@ -93,18 +93,18 @@
 
       <div class="photo_box_w">
   <div class="eiole">
-    <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="<span class="translation_missing">fi, photos, w_frogs</span>">
+    <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Tanssivat  sammakot">
       <img src="../photos/w_frogs.jpg"  >
     </a><br/>
-    <span class="translation_missing">fi, photos, w_frogs</span>
+    Tanssivat  sammakot
   </div>
 </div>
 <div class="photo_box_w">
   <div class="eiole">
-    <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="<span class="translation_missing">fi, photos, w_terasse</span>">
+    <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="Terassi">
       <img src="../photos/w_terasse.jpg"  >
     </a><br/>
-    <span class="translation_missing">fi, photos, w_terasse</span>
+    Terassi
   </div>
 </div>
 <div class="photo_box_w">
