first round of fixing (ie7)

--- a/villataika.fi/en/deluxe.html
+++ b/villataika.fi/en/deluxe.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Deluxe (w.toilet)" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Deluxe (w.toilet)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed & Breakfast Villa Taika : Deluxe (w.toilet)</title>
+  <title>Bed &amp; Breakfast Villa Taika : Deluxe (w.toilet)</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="../fi/deluxe.html" >  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="deluxe.html" class='selected'>  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -99,7 +95,7 @@
         </a>
       </div>
       <h2> Green room </h2>
-      The <b>Green room</b>  is calm and peaceful room with a beautiful view of the garden. <br> There is a double bed  and it fits another spare bed. It also has a small little cove, which fits a childs bed, and they love it.<br> There is an en-suite wc, and it shares a shower with the next door Orange room.<br> Orange and Green room together are a very good choice for small groups, or large families, as there is also a small lounge for these two rooms. <br> The price for two is 75€ / Single 60€
+      The <b>Green room</b>  is calm and peaceful room with a beautiful view of the garden. <br/> There is a double bed  and it fits another spare bed. It also has a small little cove, which fits a childs bed, and they love it.<br/> There is an en-suite wc, and it shares a shower with the next door Orange room.<br/> Orange and Green room together are a very good choice for small groups, or large families, as there is also a small lounge for these two rooms. <br/> The price for two is 75€ / Single 60€
     </div>
   </div>
   <div class="box">
@@ -110,7 +106,7 @@
         </a>
       </div>
       <h2> Orange room </h2>
-      The <b>Orange room</b>  has a warm and cosy atmosphere, with a bright feel to it.<br> There is a double bed and it can fit one adult or two children extra. <br> The room has a en-suite wc and shares a shower with the next door Green room. <br> From its second floor it has a beautiful view of the garden with its pond and surrounding nature. <br> Orange and Green room together are a good choice for small groups, or large families, as there is also a small lounge for these two rooms.<br> The price for two is 75€.
+      The <b>Orange room</b>  has a warm and cosy atmosphere, with a bright feel to it.<br/> There is a double bed and it can fit one adult or two children extra. <br/> The room has a en-suite wc and shares a shower with the next door Green room. <br/> From its second floor it has a beautiful view of the garden with its pond and surrounding nature. <br/> Orange and Green room together are a good choice for small groups, or large families, as there is also a small lounge for these two rooms.<br/> The price for two is 75€.
     </div>
   </div>
 
@@ -123,17 +119,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
