--- a/villataika.fi/en/bed.html
+++ b/villataika.fi/en/bed.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Bed &amp; Breakfast" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Bed &amp; Breakfast" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed & Breakfast Villa Taika : Bed &amp; Breakfast</title>
+  <title>Bed &amp; Breakfast Villa Taika : Bed &amp; Breakfast</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="../fi/bed.html" >  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="bed.html" class='selected'>  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -93,7 +89,7 @@
 
       <div class="wide_bed_box">
   <div class="bed_box">
-      Welcome to the charming and peaceful Villa Taika! <br> We have created unique B&B, with 8 individually decorated rooms. Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the pieces of furniture, that we selected to our rooms. <br> We hope you will be revitalisedand rested in the beauty of our surroundings! <br>
+      Welcome to the charming and peaceful Villa Taika! <br/> We have created unique B&B, with 8 individually decorated rooms. Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the pieces of furniture, that we selected to our rooms. <br/> We hope you will be revitalisedand rested in the beauty of our surroundings! <br/>
 In the backyard we have a garden with the pond and waterfall. You can relax in the garden by listening to the soothing sound of the water or make trips to the nearby tourist sights. The Billnäs 15km, Mustio castle 15km, beautiful towns of Tammisaari 35 km and Hanko 65km
   </div>
 </div>
@@ -132,7 +128,7 @@ In the backyard we have a garden with the pond and waterfall. You can relax in t
 <br/>
 <div class="wide_bed_box">
   <div class="bed_box">
-      The room price is for two people, between 75 and 95€ , and extra beds cost 25€. <br> The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br> You can sign into your room between 14-19 . Please let us know what time you'll be arriving! <br> Checkout by 12 o'clock
+      The room price is for two people, between 75 and 95€ , and extra beds cost 25€. <br/> The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br/> You can sign into your room between 14-19 . Please let us know what time you'll be arriving! <br/> Checkout by 12 o'clock
   </div>
   
 </div>
@@ -147,17 +143,17 @@ In the backyard we have a garden with the pond and waterfall. You can relax in t
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
