--- a/villataika.fi/en/groups.html
+++ b/villataika.fi/en/groups.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Groups" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Groups" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed & Breakfast Villa Taika : Groups</title>
+  <title>Bed &amp; Breakfast Villa Taika : Groups</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="../fi/groups.html" >  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="groups.html" class='selected'>  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -100,12 +96,12 @@
   <img src ="../images/garden_group.jpg" height="196" width="140px">
 </div>
 <div class="right">
-  In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br><br> <ul> <li> large group room</li> <li> large garden</li> <li> high quality sound + video</li> <li> blankets and cushions</li> <li> wood heated sauna + pool</li> <li> accomodate 20-30 people</li> <li> extra teacher room</li> <li> nearby activities</li> <li> vegetarian food</li> </ul>
+  In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br/><br/> <ul> <li> large group room</li> <li> large garden</li> <li> high quality sound + video</li> <li> blankets and cushions</li> <li> wood heated sauna + pool</li> <li> accomodate 20-30 people</li> <li> extra teacher room</li> <li> nearby activities</li> <li> vegetarian food</li> </ul>
 </div>
 <div class="divider"> </div>
 <div class="left">
-  <br>
-  Our beautifully decorated group space has a good size to allow many activities with enough space, be it yoga, dancing, body work or other group work. <br> Our garden is large and open, and well suited for quiet activities . <br> The group space is also well equipped with a high quality steoro system and a video projector is available if needed. <br> For quiet group work we have blankets and sitting cousions for participants. <br> During courses it is possible to use our large, wood heated sauna, and our small pool. <br> On the courses we can accomodate 25 people comfortably in our 8 rooms, but up to 30 is possible using extra beds, and we also have a seperate room for the teacher<br> There are many local activities for groups that are not courses, see our <a href="activities.html">activities page</a>. <br> We offer vegetarian or vegan food, prepared with love. <br> Prices and details subject to negotiation. Full board prices with use of group room and sauna range from 50-65€, with prices depending on group size and food requirements. <br> <br>
+  <br/>
+  Our beautifully decorated group space has a good size to allow many activities with enough space, be it yoga, dancing, body work or other group work. <br/> Our garden is large and open, and well suited for quiet activities . <br/> The group space is also well equipped with a high quality steoro system and a video projector is available if needed. <br/> For quiet group work we have blankets and sitting cousions for participants. <br/> During courses it is possible to use our large, wood heated sauna, and our small pool. <br/> On the courses we can accomodate 25 people comfortably in our 8 rooms, but up to 30 is possible using extra beds, and we also have a seperate room for the teacher<br/> There are many local activities for groups that are not courses, see our <a href="activities.html">activities page</a>. <br/> We offer vegetarian or vegan food, prepared with love. <br/> Prices and details subject to negotiation. Full board prices with use of group room and sauna range from 50-65€, with prices depending on group size and food requirements. <br/> <br/>
 </div>
 
 
@@ -118,17 +114,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
