--- a/villataika.fi/en/news.html
+++ b/villataika.fi/en/news.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance News" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance News" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed & Breakfast Villa Taika : News</title>
+  <title>Bed &amp; Breakfast Villa Taika : News</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="../fi/news.html" >  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="news.html" class='selected'>  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -99,7 +95,7 @@
         </a>
       </div>
     <h2> Affordable accommodation in redocorated granery </h2>
-    On the yard we have room granary 60€/ 2hh. Room is traditionally decorated. <br> Traditional log cabin that is decorated with afour poster bed. two peple can sleep in it. Shower and toilet are in the main building.
+    On the yard we have room granary 60€/ 2hh. Room is traditionally decorated. <br/> Traditional log cabin that is decorated with afour poster bed. two peple can sleep in it. Shower and toilet are in the main building.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
@@ -111,7 +107,7 @@
         </a>
       </div>
     <h2> Ecological energy. </h2>
-    Villa Taika now uses only renewable enery <br> We have installed a new wood heating sytem. A modern wood gasification stove now produces most of the energy neeeded. But also a water circulating fireplace contributes to the heating of the house. <br> Additionally we installed a very energy efficient heat pump in our breakfast lounge.<br> The electricity powering the pump, and indeed the whole house is 100% renwable, like wind and water power, bought from Kraft and Kultur.
+    Villa Taika now uses only renewable enery <br/> We have installed a new wood heating sytem. A modern wood gasification stove now produces most of the energy neeeded. But also a water circulating fireplace contributes to the heating of the house. <br/> Additionally we installed a very energy efficient heat pump in our breakfast lounge.<br/> The electricity powering the pump, and indeed the whole house is 100% renwable, like wind and water power, bought from Kraft and Kultur.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
@@ -127,17 +123,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
