--- a/villataika.fi/en/standard.html
+++ b/villataika.fi/en/standard.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Standard (shared)" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Standard (shared)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed & Breakfast Villa Taika : Standard (shared)</title>
+  <title>Bed &amp; Breakfast Villa Taika : Standard (shared)</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="../fi/standard.html" >  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="standard.html" class='selected'>  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -99,7 +95,7 @@
         </a>
       </div>
       <h2> Rose room </h2>
-      The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br> It has a double bed and a cosy sofa for two. <br> It shares a toilet and shower with the next door Sky room. <br> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br> The price for two is 75€/ Sinle 60€
+      The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br/> It has a double bed and a cosy sofa for two. <br/> It shares a toilet and shower with the next door Sky room. <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> The price for two is 75€/ Sinle 60€
     </div>
   </div>
   <div class="box">
@@ -110,7 +106,7 @@
         </a>
       </div>
       <h2> Sky room </h2>
-      The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br> It shares a toilet and shower with the next door Rose room.  <br> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br> There is a double bed, and space for an extra bed on request. <br> The price for two is 75€/ Single 60€
+      The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br/> It shares a toilet and shower with the next door Rose room.  <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> There is a double bed, and space for an extra bed on request. <br/> The price for two is 75€/ Single 60€
     </div>
   </div>
 
@@ -123,17 +119,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
