--- a/villataika.fi/en/suites.html
+++ b/villataika.fi/en/suites.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Suites (w.shower)" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Suites (w.shower)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed & Breakfast Villa Taika : Suites (w.shower)</title>
+  <title>Bed &amp; Breakfast Villa Taika : Suites (w.shower)</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="../fi/suites.html" >  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="suites.html" class='selected'>  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -99,7 +95,7 @@
         </a>
       </div>
       <h2> Lotus Suite </h2>
-      The <b>Lotus Suite</b>  is a charming and spacious flat of about 40 m², with asian elegance. <br> It has it's own bathroom with shower and toilet, and a <b>private terasse</b>. <br> One can get a glimpse of the  nearby lake, and the terasse is a perfect place to enjoy the morning in the sun. <br> There is a double bed, and plenty of space for up to three extra beds on request. <br> The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes extra decoration with flowers and candles, and breakfeast can be served privately to the room or terasse.<br> The room price for two is 95€. (Weddingpackage is 135€ for two)
+      The <b>Lotus Suite</b>  is a charming and spacious flat of about 40 m², with asian elegance. <br/> It has it's own bathroom with shower and toilet, and a <b>private terasse</b>. <br/> One can get a glimpse of the  nearby lake, and the terasse is a perfect place to enjoy the morning in the sun. <br/> There is a double bed, and plenty of space for up to three extra beds on request. <br/> The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes extra decoration with flowers and candles, and breakfeast can be served privately to the room or terasse.<br/> The room price for two is 95€. (Weddingpackage is 135€ for two)
     </div>
   </div>
   <div class="box">
@@ -110,7 +106,7 @@
         </a>
       </div>
       <h2> Sun suite </h2>
-      The <b>Sun suite</b> is an elegant, sunny and spacious room. <br> Traditional timberframing gives the room a rustic touch which counterpoints the elegant interiour with beautiful teak furniture.<br> Facing south with large windows there is a sunny and light feeling in the room. Alsoit feels spacious as the ceilings are over 3m high.<br> Shower and toilet are ensuite. There is a double bed and a space to fit two extra beds.<br> The price for two is 90€/75€ single
+      The <b>Sun suite</b> is an elegant, sunny and spacious room. <br/> Traditional timberframing gives the room a rustic touch which counterpoints the elegant interiour with beautiful teak furniture.<br/> Facing south with large windows there is a sunny and light feeling in the room. Alsoit feels spacious as the ceilings are over 3m high.<br/> Shower and toilet are ensuite. There is a double bed and a space to fit two extra beds.<br/> The price for two is 90€/75€ single
     </div>
   </div>
   <div class="box">
@@ -121,7 +117,7 @@
         </a>
       </div>
       <h2> Amethyst room </h2>
-      The <b>Amethyst</b> room is a light and sunny 15m² room with handcarved relief. <br> The room has is south facing  with large windows and high ceiling that give it a spacious feel.<br> There is a private bathroom with shower and a double bed. One extra bed can be arranged. <br> The price for two is 85€/70€ single
+      The <b>Amethyst</b> room is a light and sunny 15m² room with handcarved relief. <br/> The room has is south facing  with large windows and high ceiling that give it a spacious feel.<br/> There is a private bathroom with shower and a double bed. One extra bed can be arranged. <br/> The price for two is 85€/70€ single
     </div>
   </div>
 
@@ -134,17 +130,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
