--- a/villataika.fi/fi/deluxe.html
+++ b/villataika.fi/fi/deluxe.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Deluxe (wc:llä)" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Deluxe (wc:llä)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Deluxe (wc:llä)</title>
+  <title>Bed &amp; Breakfast Villa Taika : Deluxe (wc:llä)</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="deluxe.html" class='selected'>  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="../en/deluxe.html" >  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -99,7 +95,7 @@
         </a>
       </div>
       <h2> Vihreä huone </h2>
-      <b>Vihreä huone </b>on tunnelmallinen ja rauhaisa 20m2 huone. Siellä on parisänky ja sinne mahtuu lisävuode. Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. <br> Yläkerran huoneesta on kaunis näkymä puutarhaan. <br>Vihreä-ja Oranssi huone sopivat hyvin pienille ryhmille tai isolle perheelle yhteiskäytössä. Huoneiden välissä on myös sievä oleskelutila. <br> Hinta on 75€ /2hh/60€ 1hh
+      <b>Vihreä huone </b>on tunnelmallinen ja rauhaisa 20m2 huone. Siellä on parisänky ja sinne mahtuu lisävuode. Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. <br/> Yläkerran huoneesta on kaunis näkymä puutarhaan. <br/>Vihreä-ja Oranssi huone sopivat hyvin pienille ryhmille tai isolle perheelle yhteiskäytössä. Huoneiden välissä on myös sievä oleskelutila. <br/> Hinta on 75€ /2hh/60€ 1hh
     </div>
   </div>
   <div class="box">
@@ -110,7 +106,7 @@
         </a>
       </div>
       <h2> Oranssi huone </h2>
-      <b>Oranssi huone </b>on viihtyisä ja  20m2 huone. Siellä on parisänky ja sinne mahtuu kaksikin lisävuodetta. <br> Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. <br> Yläkerran huoneesta on kaunis näkymä puutarhaan. <br> Vihreä-ja Oranssi huone sopivat hyvin pienille ryhmille tai isolle perheelle yhteiskäytössä. Huoneiden välissä on myös sievä oleskelutila. <br> Hinta on 75€ /2hh/ 60€ 1hh
+      <b>Oranssi huone </b>on viihtyisä ja  20m2 huone. Siellä on parisänky ja sinne mahtuu kaksikin lisävuodetta. <br/> Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. <br/> Yläkerran huoneesta on kaunis näkymä puutarhaan. <br/> Vihreä-ja Oranssi huone sopivat hyvin pienille ryhmille tai isolle perheelle yhteiskäytössä. Huoneiden välissä on myös sievä oleskelutila. <br/> Hinta on 75€ /2hh/ 60€ 1hh
     </div>
   </div>
 
@@ -123,17 +119,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
