--- a/villataika.fi/fi/standard.html
+++ b/villataika.fi/fi/standard.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Standard (jaettu)" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Standard (jaettu)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Standard (jaettu)</title>
+  <title>Bed &amp; Breakfast Villa Taika : Standard (jaettu)</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="standard.html" class='selected'>  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="../en/standard.html" >  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -99,7 +95,7 @@
         </a>
       </div>
       <h2> Ruusu huone </h2>
-      <b>Ruusu huone </b>on romanttinen huone. Huoneessa on parisänky, ja mukava sohva. Sillä on yhteinen wc ja suihku viereisen Taivas huoneen kanssa.<br> Yhdessä Taivas huoneen kanssa, se sopii erinomaisesti isolle perheelle tai pienelle ryhmälle.<br> Hinta on 75€ /2hh ja 60€/1hh
+      <b>Ruusu huone </b>on romanttinen huone. Huoneessa on parisänky, ja mukava sohva. Sillä on yhteinen wc ja suihku viereisen Taivas huoneen kanssa.<br/> Yhdessä Taivas huoneen kanssa, se sopii erinomaisesti isolle perheelle tai pienelle ryhmälle.<br/> Hinta on 75€ /2hh ja 60€/1hh
     </div>
   </div>
   <div class="box">
@@ -110,7 +106,7 @@
         </a>
       </div>
       <h2> Taivas huone </h2>
-      <b>Taivas huone </b>on rauhoittava ja  viehkeä huone. Sillä on yhteinen wc ja suihku viereisen Ruusu huoneen kanssa. Huoneessa on parisänky, ja sinne saa lisävuoteen tai kaksi tarvittaessa.. Yhdessä Ruusu huoneen kanssa, se sopii erinomaisesti isolle perheelle tai pienelle ryhmälle.<br> Hinta on 75€ /2hh ja 60€/ 1hh
+      <b>Taivas huone </b>on rauhoittava ja  viehkeä huone. Sillä on yhteinen wc ja suihku viereisen Ruusu huoneen kanssa. Huoneessa on parisänky, ja sinne saa lisävuoteen tai kaksi tarvittaessa.. Yhdessä Ruusu huoneen kanssa, se sopii erinomaisesti isolle perheelle tai pienelle ryhmälle.<br/> Hinta on 75€ /2hh ja 60€/ 1hh
     </div>
   </div>
 
@@ -123,17 +119,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
