--- a/villataika.fi/fi/suites.html
+++ b/villataika.fi/fi/suites.html
@@ -5,21 +5,17 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Sviitit (suihkulla)" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Sviitit (suihkulla)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Sviitit (suihkulla)</title>
+  <title>Bed &amp; Breakfast Villa Taika : Sviitit (suihkulla)</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="suites.html" class='selected'>  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="../en/suites.html" >  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -99,7 +95,7 @@
         </a>
       </div>
       <h2> Lootus sviitti </h2>
-      <b>Lootus sviitti </b> on viehättävä , aasialaisella tyylikkyydellä sisustettu huoneisto 40m².<br> Siihen kuuluu oma wc ja suihku, sekä terassi , jolta pilkottaa läheinen järvi.<br> Huoneessa on parisänky ja sinne mahtuu 3 tai 4 lisävuodetta. <br>  <br> Sviitti sopii myös hääpareille. Hääpaketti sisältää huoneen ja lisäkoristelun kukkasilla ja kynttilöillä. Aamupala haluttaessa sään salliessa omalla terassilla. <br> Hinta on 95€ /2hh. (Hääpaketti on 135€ /2hh)
+      <b>Lootus sviitti </b> on viehättävä , aasialaisella tyylikkyydellä sisustettu huoneisto 40m².<br/> Siihen kuuluu oma wc ja suihku, sekä terassi , jolta pilkottaa läheinen järvi.<br/> Huoneessa on parisänky ja sinne mahtuu 3 tai 4 lisävuodetta. <br/>  <br/> Sviitti sopii myös hääpareille. Hääpaketti sisältää huoneen ja lisäkoristelun kukkasilla ja kynttilöillä. Aamupala haluttaessa sään salliessa omalla terassilla. <br/> Hinta on 95€ /2hh. (Hääpaketti on 135€ /2hh)
     </div>
   </div>
   <div class="box">
@@ -110,7 +106,7 @@
         </a>
       </div>
       <h2> Aurinko sviitti </h2>
-      <b>Aurinko sviitti</b> on valoisa ja tyylikäs 25m² sviitti. Perinteisellä hirsirakennus tekniikalla rakennetut kaaret tuovat oman lisänsä, tyylikkäillä tiikki huonekaluilla sisustettuun huoneseen. <br> Siellä on parisänky ja sinne mahtuu mukavasti kaksikin lisävuodetta. Siinä on oma wc ja suihku.<br> Hinta on 90€ /2hh ja 75€ /1hh
+      <b>Aurinko sviitti</b> on valoisa ja tyylikäs 25m² sviitti. Perinteisellä hirsirakennus tekniikalla rakennetut kaaret tuovat oman lisänsä, tyylikkäillä tiikki huonekaluilla sisustettuun huoneseen. <br/> Siellä on parisänky ja sinne mahtuu mukavasti kaksikin lisävuodetta. Siinä on oma wc ja suihku.<br/> Hinta on 90€ /2hh ja 75€ /1hh
     </div>
   </div>
   <div class="box">
@@ -121,7 +117,7 @@
         </a>
       </div>
       <h2> Ametisti huone </h2>
-      <b>Ametisti huone </b>on valoisa ja kaunis 15m² huone. Huonetta koristaa käsinkaiverrettu reliefi ja uniikki käsinmaalattu kaappi. <br> Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode. Huoneessa on oma wc ja suihku.<br> Hinta on 85€ /2hh ja 70€/ 1hh
+      <b>Ametisti huone </b>on valoisa ja kaunis 15m² huone. Huonetta koristaa käsinkaiverrettu reliefi ja uniikki käsinmaalattu kaappi. <br/> Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode. Huoneessa on oma wc ja suihku.<br/> Hinta on 85€ /2hh ja 70€/ 1hh
     </div>
   </div>
 
@@ -134,17 +130,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
