--- a/villataika.fi/en/deluxe.html
+++ b/villataika.fi/en/deluxe.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -86,12 +86,11 @@
 
   <div id="rcol">
     <div id="rcontent">
-
         <div class="box">
     <div class="box_inner">
       <div class="captioned_image">
         <a href="../images/green.jpg" rel="lightbox[deluxe]" title="Green room">
-          <img src="../images/green_small.jpg" >
+          <img src="../images/green_small.jpg" alt='Green room'/>
         </a>
       </div>
       <h2> Green room </h2>
@@ -102,7 +101,7 @@
     <div class="box_inner">
       <div class="captioned_image">
         <a href="../images/orange.jpg" rel="lightbox[deluxe]" title="Orange room">
-          <img src="../images/orange_small.jpg" >
+          <img src="../images/orange_small.jpg" alt='Orange room'/>
         </a>
       </div>
       <h2> Orange room </h2>
@@ -110,10 +109,9 @@
     </div>
   </div>
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -129,7 +127,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
