--- a/villataika.fi/en/groups.html
+++ b/villataika.fi/en/groups.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -86,14 +86,13 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <div class="left">
   <img src ="../images/sali.gif" width=450px height=336px/>
 </div>
 <div class="left2">
-  <img src ="../images/allas.jpg">
-  <img src ="../images/blank.gif" height="1px" width="140px">
-  <img src ="../images/garden_group.jpg" height="196" width="140px">
+  <img src ="../images/allas.jpg" alt="allas" />
+  <img src ="../images/blank.gif" height="1px" width="140px" alt="blank"/>
+  <img src ="../images/garden_group.jpg" height="196" width="140px" alt="garden"/>
 </div>
 <div class="right">
   In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br/><br/> <ul> <li> large group room</li> <li> large garden</li> <li> high quality sound + video</li> <li> blankets and cushions</li> <li> wood heated sauna + pool</li> <li> accomodate 20-30 people</li> <li> extra teacher room</li> <li> nearby activities</li> <li> vegetarian food</li> </ul>
@@ -105,10 +104,9 @@
 </div>
 
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -124,7 +122,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
