--- a/villataika.fi/fi/bed.html
+++ b/villataika.fi/fi/bed.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -86,10 +86,9 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <div class="wide_bed_box">
   <div class="bed_box">
-      Tervetuloa viehättävään Villa Taikaan! <br/>Olemme luoneet B&B;n, jossa jokainen huone on uniikisti sisustettu. <br/> Matkoillamme Aasiaan olemme usein lumoutuneet sen kauneudesta. Valitsimme huoneisiimme yksilölliset huonekalut muistuttamaan ja inspiroimaan elämän ainutlaatuisesta kauneudesta. <br/> Toivomme että sinäkin nautit siitä täällä luonamme Villa Taiassa! <br/>Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit nauttia olostasi vesiputouksen solinaa kuunnellen. <br/> <br/> Tulopäivänä huoneeseen voi saapua klo 14-19. Ilmoitathan saapumisajan etukäteen!! Huone luovutetaan klo 12 mennessä.<br/>Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, Tammisaari 35km.
+      Tervetuloa viehättävään Villa Taikaan! <br/>Olemme luoneet B&amp;;n, jossa jokainen huone on uniikisti sisustettu. <br/> Matkoillamme Aasiaan olemme usein lumoutuneet sen kauneudesta. Valitsimme huoneisiimme yksilölliset huonekalut muistuttamaan ja inspiroimaan elämän ainutlaatuisesta kauneudesta. <br/> Toivomme että sinäkin nautit siitä täällä luonamme Villa Taiassa! <br/>Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit nauttia olostasi vesiputouksen solinaa kuunnellen. <br/> <br/> Tulopäivänä huoneeseen voi saapua klo 14-19. Ilmoitathan saapumisajan etukäteen!! Huone luovutetaan klo 12 mennessä.<br/>Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, Tammisaari 35km.
   </div>
 </div>
 <div class="divider"></div>
@@ -100,8 +99,8 @@
     <a href="suites.html">
       Sviitit (suihkulla) 
       <img src="../images/sun_small.jpg"  
-          alt=shortSviitit (suihkulla)  
-          height=187px  width=250px />
+          alt=Sviitit (suihkulla)  
+          height="187px"  width="250px" />
 </a>    <br/>
     3 sviittiä omalla suihkulla 85/90/95
   </div>
@@ -109,8 +108,8 @@
     <a href="deluxe.html">
     Deluxe (wc:llä) 
       <img src="/images/orange_small.jpg"  
-          alt=shortDeluxe (wc:llä)  
-          height=187px  width=250px />
+          alt=Deluxe (wc:llä)  
+          height="187px"  width="250px" />
 </a>    <br/>
     2 huonetta omalla wc:llä (yläkerrassa) 75€/2hh ja 60€/1hh
   </div>
@@ -118,8 +117,8 @@
     <a href="standard.html">
     Standard (jaettu) 
       <img src="../images/rose_small.jpg"  
-          alt="shortStandard (jaettu)"  
-          height=187px  width=250px />
+          alt="Standard (jaettu)"  
+          height="187px"  width="250px" />
 </a>    <br/>
     2 huonetta, jotka jakavat yhteisen suihkun, 75€/2hh ja 60€/1hh
   </div>
@@ -133,10 +132,9 @@
 </div>
 <div class="divider"></div>
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -152,7 +150,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
