--- a/villataika.fi/fi/photos.html
+++ b/villataika.fi/fi/photos.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -86,11 +86,10 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <div class="photo_box_w">
   <div class="eiole">
     <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Tanssivat  sammakot">
-      <img src="../photos/w_frogs.jpg"  >
+      <img src="../photos/w_frogs.jpg" alt="Tanssivat  sammakot"/>
     </a><br/>
     Tanssivat  sammakot
   </div>
@@ -98,7 +97,7 @@
 <div class="photo_box_w">
   <div class="eiole">
     <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="Terassi">
-      <img src="../photos/w_terasse.jpg"  >
+      <img src="../photos/w_terasse.jpg" alt="Terassi"/>
     </a><br/>
     Terassi
   </div>
@@ -106,7 +105,7 @@
 <div class="photo_box_w">
   <div class="eiole">
     <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Suihkulähde">
-      <img src="../photos/w_peony.jpg"  >
+      <img src="../photos/w_peony.jpg" alt="Suihkulähde"/>
     </a><br/>
     Suihkulähde
   </div>
@@ -114,7 +113,7 @@
 <div class="photo_box_h">
   <div class="eiole">
     <a href="../photos/large/h_aurinko_wc.jpg" rel="lightbox[photos]" title="Aurinko wc">
-      <img src="../photos/h_aurinko_wc.jpg"  >
+      <img src="../photos/h_aurinko_wc.jpg" alt="Aurinko wc"/>
     </a><br/>
     Aurinko wc
   </div>
@@ -122,7 +121,7 @@
 <div class="photo_box_h">
   <div class="eiole">
     <a href="../photos/large/h_curves.jpg" rel="lightbox[photos]" title="Aurinko sviitin kaiverrukset">
-      <img src="../photos/h_curves.jpg"  >
+      <img src="../photos/h_curves.jpg" alt="Aurinko sviitin kaiverrukset"/>
     </a><br/>
     Aurinko sviitin kaiverrukset
   </div>
@@ -130,7 +129,7 @@
 <div class="photo_box_h">
   <div class="eiole">
     <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lootus WC">
-      <img src="../photos/h_lootus_wc.jpg"  >
+      <img src="../photos/h_lootus_wc.jpg" alt="Lootus WC"/>
     </a><br/>
     Lootus WC
   </div>
@@ -138,17 +137,16 @@
 <div class="photo_box_h">
   <div class="eiole">
     <a href="../photos/large/h_highview.jpg" rel="lightbox[photos]" title="Villa Taika korkealta">
-      <img src="../photos/h_highview.jpg"  >
+      <img src="../photos/h_highview.jpg" alt="Villa Taika korkealta"/>
     </a><br/>
     Villa Taika korkealta
   </div>
 </div>
 
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -164,7 +162,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
