--- a/villataika.fi/fi/standard.html
+++ b/villataika.fi/fi/standard.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -86,12 +86,11 @@
 
   <div id="rcol">
     <div id="rcontent">
-
         <div class="box">
     <div class="box_inner">
       <div class="captioned_image">
         <a href="../images/rose.jpg" rel="lightbox[standard]" title="Ruusu huone">
-          <img src="../images/rose_small.jpg" >
+          <img src="../images/rose_small.jpg" />
         </a>
       </div>
       <h2> Ruusu huone </h2>
@@ -102,7 +101,7 @@
     <div class="box_inner">
       <div class="captioned_image">
         <a href="../images/sky.jpg" rel="lightbox[standard]" title="Taivas huone">
-          <img src="../images/sky_small.jpg" >
+          <img src="../images/sky_small.jpg" />
         </a>
       </div>
       <h2> Taivas huone </h2>
@@ -110,10 +109,9 @@
     </div>
   </div>
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -129,7 +127,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
