--- a/villataika.fi/fi/suites.html
+++ b/villataika.fi/fi/suites.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -86,12 +86,11 @@
 
   <div id="rcol">
     <div id="rcontent">
-
         <div class="box">
     <div class="box_inner">
       <div class="captioned_image">
         <a href="../images/lootus.jpg" rel="lightbox[suites]" title="Lootus sviitti">
-          <img src="../images/lootus_small.jpg" >
+          <img src="../images/lootus_small.jpg" />
         </a>
       </div>
       <h2> Lootus sviitti </h2>
@@ -102,7 +101,7 @@
     <div class="box_inner">
       <div class="captioned_image">
         <a href="../images/sun.jpg" rel="lightbox[suites]" title="Aurinko sviitti">
-          <img src="../images/sun_small.jpg" >
+          <img src="../images/sun_small.jpg" />
         </a>
       </div>
       <h2> Aurinko sviitti </h2>
@@ -113,7 +112,7 @@
     <div class="box_inner">
       <div class="captioned_image">
         <a href="../images/ametist.jpg" rel="lightbox[suites]" title="Ametisti huone">
-          <img src="../images/ametist_small.jpg" >
+          <img src="../images/ametist_small.jpg" />
         </a>
       </div>
       <h2> Ametisti huone </h2>
@@ -121,10 +120,9 @@
     </div>
   </div>
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -140,7 +138,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
