--- a/villataika.fi/en/activities.html
+++ b/villataika.fi/en/activities.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -86,13 +86,12 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       
 <div class="activity_box">
   <div class="box_inner">
       <a href="../activities/large/swim.jpg" rel="lightbox[activity]" title="Swimming in clean lakes">
 	    <h2> Swimming in clean lakes </h2>
-        <img src="../activities/swim.jpg" >
+        <img src="../activities/swim.jpg" alt="Swimming in clean lakes"/>
         </a>
     There are several opertunities to go swimming. The closest beach on Isosimi lake is about 200m walk. There are three more family friendly beaches a few minutes drive away by car or bicycle.
   </div>
@@ -103,7 +102,7 @@
   <div class="box_inner">
       <a href="../activities/large/forest.jpg" rel="lightbox[activity]" title="Walk or cycle through woods">
 	    <h2> Walk or cycle through woods </h2>
-        <img src="../activities/forest.jpg" >
+        <img src="../activities/forest.jpg" alt="Walk or cycle through woods"/>
         </a>
     There are many unpaved paths through the surrounding nature reseve. Bring your own bicycle, get one from us or walk to explore the surrounding nature.
   </div>
@@ -114,7 +113,7 @@
   <div class="box_inner">
       <a href="../activities/large/row.jpg" rel="lightbox[activity]" title="Rowing or fishing, time off">
 	    <h2> Rowing or fishing, time off </h2>
-        <img src="../activities/row.jpg" >
+        <img src="../activities/row.jpg" alt="Rowing or fishing, time off"/>
         </a>
     It is possible to rent the rowing boat for a small fee and spend some quiet time on the lake just a few minutes away. For groups canoe trips can be arranged.
   </div>
@@ -125,7 +124,7 @@
   <div class="box_inner">
       <a href="../activities/large/garden.jpg" rel="lightbox[activity]" title="Relax in peace">
 	    <h2> Relax in peace </h2>
-        <img src="../activities/garden.jpg" >
+        <img src="../activities/garden.jpg" alt="Relax in peace"/>
         </a>
     Our lovely and large garden has several spaces to retreat, and to the beautiful sound of the waterfall you may not want to leave.
   </div>
@@ -136,7 +135,7 @@
   <div class="box_inner">
       <a href="../activities/large/fiskars.jpg" rel="lightbox[activity]" title="Fiskars &amp; Bilnas Villages">
 	    <h2> Fiskars &amp; Bilnas Villages </h2>
-        <img src="../activities/fiskars.jpg" >
+        <img src="../activities/fiskars.jpg" alt="Fiskars &amp; Bilnas Villages"/>
         </a>
     The beautifully restored art and craft centre of Fiskars is just a 5 minutes drive away. There are handicraft shops, workshops, cafes and restaurants. Bilnas, another old ironwork centre, is just over 10 minutes drive.
   </div>
@@ -147,7 +146,7 @@
   <div class="box_inner">
       <a href="../activities/large/hanko.jpg" rel="lightbox[activity]" title="Tammisaari and Hanko, old towns">
 	    <h2> Tammisaari and Hanko, old towns </h2>
-        <img src="../activities/hanko.jpg" >
+        <img src="../activities/hanko.jpg" alt="Tammisaari and Hanko, old towns"/>
         </a>
     Tammisaari and Hanko are both beautiful old towns with lots of wooden houses, by the sea. Perfect for a day trip, Tammisaari is just over half an hours drive and Hanko slightly further.
   </div>
@@ -158,7 +157,7 @@
   <div class="box_inner">
       <a href="../activities/large/raasepori.jpg" rel="lightbox[activity]" title="Raasepori and Mustio">
 	    <h2> Raasepori and Mustio </h2>
-        <img src="../activities/raasepori.jpg" >
+        <img src="../activities/raasepori.jpg" alt="Raasepori and Mustio"/>
         </a>
     The old stone castle of Raasepori, now the namesake of the region is close by. Also the grand castle of Mustio is just 15 minutes away where you can have a dinner or enjoy a cuppa by the lake.
   </div>
@@ -169,17 +168,16 @@
   <div class="box_inner">
       <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Group activities">
 	    <h2> Group activities </h2>
-        <img src="../activities/groups.jpg" >
+        <img src="../activities/groups.jpg" alt="Group activities"/>
         </a>
     <a href="http://www.kdadventure.com/fi/activities/kursseja/">KD Adventure</a>, can arrange a variety of group activities, like nature courses,canoing, themed evenings, coal walking and paintball.  Best of all, they are just next door, so you can enjoy a shower and warm bed in Villa Taika, after an adventourous day.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -195,7 +193,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
