--- a/villataika.fi/en/map.html
+++ b/villataika.fi/en/map.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -86,7 +86,6 @@
 
   <div id="rcol">
     <div id="rcontent">
-
         <div class="left">
 <iframe width="600" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 </div>
@@ -103,10 +102,9 @@ Coming from Fiskars it is the third house on the right in the Antskog village.
 We have lakeview from both sides of the house, and there is beautiful nature around for walks.
 </div>
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -122,7 +120,7 @@ We have lakeview from both sides of the house, and there is beautiful nature aro
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
