--- a/villataika.fi/fi/activities.html
+++ b/villataika.fi/fi/activities.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -86,13 +86,12 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       
 <div class="activity_box">
   <div class="box_inner">
       <a href="../activities/large/swim.jpg" rel="lightbox[activity]" title="Uimista läheisissä järvissä">
 	    <h2> Uimista läheisissä järvissä </h2>
-        <img src="../activities/swim.jpg" >
+        <img src="../activities/swim.jpg" alt="Uimista läheisissä järvissä"/>
         </a>
     Lähin järvi on Isosimi, jonka uimapaikkaan on 200m. Villa Taian lähiympäristössä on muitakin järviä, joista monet sopivat myös perheen pienimpienkin polskutteluun. Niihin on vain muutaman minuutin matka autolla tai polkupyörällä.
   </div>
@@ -103,7 +102,7 @@
   <div class="box_inner">
       <a href="../activities/large/forest.jpg" rel="lightbox[activity]" title="Kävelyä tai pyöräilyä lähimetsissä">
 	    <h2> Kävelyä tai pyöräilyä lähimetsissä </h2>
-        <img src="../activities/forest.jpg" >
+        <img src="../activities/forest.jpg" alt="Kävelyä tai pyöräilyä lähimetsissä"/>
         </a>
     Metsissä löytyy pikkupolkuja, joilla voi patikoida tai pyöräillä. Voit tehdä lyhyitäkin retkiä läheiseen Iso-Simin luonnonsuojelualueelle. Tuo retkipyörä mukanasi, mutta meiltä saat pyörän lainaksi, jos haluat vaikka Fiskarsiin pyöräillä
   </div>
@@ -114,7 +113,7 @@
   <div class="box_inner">
       <a href="../activities/large/row.jpg" rel="lightbox[activity]" title="Soutelua">
 	    <h2> Soutelua </h2>
-        <img src="../activities/row.jpg" >
+        <img src="../activities/row.jpg" alt="Soutelua"/>
         </a>
     On mahdollista vuokrata edullisesti soutuvene ja soudella läheisellä järvellä. Isosimin luonnonsuojelualue järvineen on hiljainen ja rauhoittava kokemus.
   </div>
@@ -125,7 +124,7 @@
   <div class="box_inner">
       <a href="../activities/large/garden.jpg" rel="lightbox[activity]" title="Puutarha">
 	    <h2> Puutarha </h2>
-        <img src="../activities/garden.jpg" >
+        <img src="../activities/garden.jpg" alt="Puutarha"/>
         </a>
     Puutarhassamme on monia levähdyspaikkoja, joissa voit istuksia, vaikka kirjaa lukemassa ja nauttia olostasi vesiputouksen solistessa rauhoittavsti.
   </div>
@@ -136,7 +135,7 @@
   <div class="box_inner">
       <a href="../activities/large/fiskars.jpg" rel="lightbox[activity]" title="Fiskarsin ruukki">
 	    <h2> Fiskarsin ruukki </h2>
-        <img src="../activities/fiskars.jpg" >
+        <img src="../activities/fiskars.jpg" alt="Fiskarsin ruukki"/>
         </a>
     Fiskarsin ruukki on ihana elämys . Siellä on pikku liikkeitä, jotka myyvät paikallisten käsityöläisten valmistamia kauniita esineitä. Myös hienot taidenäyttelyt rikastuttavat päivääsi. Fiskarsissa Ihanat kahvilat ja ravintolat tarjoavat maukasta ruokaa tai kahvia ja pikkupurtavaa. Sinne on vain 5 minuutin automatka
   </div>
@@ -147,7 +146,7 @@
   <div class="box_inner">
       <a href="../activities/large/hanko.jpg" rel="lightbox[activity]" title="Tammisaari ja Hanko">
 	    <h2> Tammisaari ja Hanko </h2>
-        <img src="../activities/hanko.jpg" >
+        <img src="../activities/hanko.jpg" alt="Tammisaari ja Hanko"/>
         </a>
     Tammisaari ja Hanko ovat molemmat idyllisiä kaupunkeja meren rannalla. Niihin voi mennä vaikka päiväretkelle nauttimaan merellisestä tunnelmasta ja ihastelemaan kaunista puutalo miljöötä. Tammisaareen on puolen tunnin automatka ja Hankoon pääsee hieman alle tunnissa.
   </div>
@@ -158,7 +157,7 @@
   <div class="box_inner">
       <a href="../activities/large/raasepori.jpg" rel="lightbox[activity]" title="Raaseporin linna ja Mustio">
 	    <h2> Raaseporin linna ja Mustio </h2>
-        <img src="../activities/raasepori.jpg" >
+        <img src="../activities/raasepori.jpg" alt="Raaseporin linna ja Mustio"/>
         </a>
     Raaseporin vanhat ja komeat linnarauniot ovat alle puolentunnin matkan päässä. Ja upea Mustion linna ja sen kaunis puutarha vain, 20 min ajomatkan päässä.Mustiossa on myös tunnelmallinen ravintola,jossa voi aterioida tai juoda kupposen kahvia.
   </div>
@@ -169,17 +168,16 @@
   <div class="box_inner">
       <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Ryhmille">
 	    <h2> Ryhmille </h2>
-        <img src="../activities/groups.jpg" >
+        <img src="../activities/groups.jpg" alt="Ryhmille"/>
         </a>
     <a href="http://www.kdadventure.com/fi/activities/kursseja/">KD Adventure</a> Naapurissamme toimiva yritys voi järjestää ryhmille toimintaa. Vaikkapa luontoretkiä, kanoottiretkiä, paintballia  tai tulisilla hiilillä kävelyä uskaliaimmille.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -195,7 +193,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
