--- a/villataika.fi/index.html
+++ b/villataika.fi/index.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -86,7 +86,6 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <div id="lotus">
   <a href='fi/suites.html'>
    <img alt='Aurinko sviitti' border='0' height='414' src='images/aurinko.jpg' valign='top' width='312' />
@@ -122,10 +121,9 @@
 
 
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -141,7 +139,7 @@
   </div>
   <div class="kolmas">
     <a href="fi/index.html">
-    <img alt="" src="images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
