--- a/villataika.fi/en/activities.html
+++ b/villataika.fi/en/activities.html
@@ -57,7 +57,7 @@
           </li>
       </ul>
     </div>
-    <div id="menu_end"></div>
+    <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
           <span>Rooms</span>
@@ -93,7 +93,7 @@
 
       
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/swim.jpg" rel="lightbox[activity]" title="Swimming in clean lakes">
 	    <h2> Swimming in clean lakes </h2>
         <img src="../activities/swim.jpg" >
@@ -104,7 +104,7 @@
 
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/forest.jpg" rel="lightbox[activity]" title="Walk or cycle through woods">
 	    <h2> Walk or cycle through woods </h2>
         <img src="../activities/forest.jpg" >
@@ -115,7 +115,7 @@
 <div class='line'> &nbsp;</div>
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/row.jpg" rel="lightbox[activity]" title="Rowing or fishing, time off">
 	    <h2> Rowing or fishing, time off </h2>
         <img src="../activities/row.jpg" >
@@ -126,7 +126,7 @@
 
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/garden.jpg" rel="lightbox[activity]" title="Relax in peace">
 	    <h2> Relax in peace </h2>
         <img src="../activities/garden.jpg" >
@@ -137,7 +137,7 @@
 <div class='line'> &nbsp;</div>
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/fiskars.jpg" rel="lightbox[activity]" title="Fiskars &amp; Bilnas Villages">
 	    <h2> Fiskars &amp; Bilnas Villages </h2>
         <img src="../activities/fiskars.jpg" >
@@ -148,7 +148,7 @@
 
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/hanko.jpg" rel="lightbox[activity]" title="Tammisaari and Hanko, old towns">
 	    <h2> Tammisaari and Hanko, old towns </h2>
         <img src="../activities/hanko.jpg" >
@@ -159,7 +159,7 @@
 <div class='line'> &nbsp;</div>
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/raasepori.jpg" rel="lightbox[activity]" title="Raasepori and Mustio">
 	    <h2> Raasepori and Mustio </h2>
         <img src="../activities/raasepori.jpg" >
@@ -170,7 +170,7 @@
 
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Group activities">
 	    <h2> Group activities </h2>
         <img src="../activities/groups.jpg" >
