--- a/villataika.fi/fi/activities.html
+++ b/villataika.fi/fi/activities.html
@@ -57,7 +57,7 @@
           </li>
       </ul>
     </div>
-    <div id="menu_end"></div>
+    <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
           <span>Huoneet</span>
@@ -93,7 +93,7 @@
 
       
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/swim.jpg" rel="lightbox[activity]" title="Uimista läheisissä järvissä">
 	    <h2> Uimista läheisissä järvissä </h2>
         <img src="../activities/swim.jpg" >
@@ -104,7 +104,7 @@
 
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/forest.jpg" rel="lightbox[activity]" title="Kävelyä tai pyöräilyä lähimetsissä">
 	    <h2> Kävelyä tai pyöräilyä lähimetsissä </h2>
         <img src="../activities/forest.jpg" >
@@ -115,7 +115,7 @@
 <div class='line'> &nbsp;</div>
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/row.jpg" rel="lightbox[activity]" title="Soutelua">
 	    <h2> Soutelua </h2>
         <img src="../activities/row.jpg" >
@@ -126,7 +126,7 @@
 
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/garden.jpg" rel="lightbox[activity]" title="Puutarha">
 	    <h2> Puutarha </h2>
         <img src="../activities/garden.jpg" >
@@ -137,7 +137,7 @@
 <div class='line'> &nbsp;</div>
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/fiskars.jpg" rel="lightbox[activity]" title="Fiskarsin ruukki">
 	    <h2> Fiskarsin ruukki </h2>
         <img src="../activities/fiskars.jpg" >
@@ -148,7 +148,7 @@
 
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/hanko.jpg" rel="lightbox[activity]" title="Tammisaari ja Hanko">
 	    <h2> Tammisaari ja Hanko </h2>
         <img src="../activities/hanko.jpg" >
@@ -159,7 +159,7 @@
 <div class='line'> &nbsp;</div>
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/raasepori.jpg" rel="lightbox[activity]" title="Raaseporin linna ja Mustio">
 	    <h2> Raaseporin linna ja Mustio </h2>
         <img src="../activities/raasepori.jpg" >
@@ -170,7 +170,7 @@
 
 
 <div class="activitybox">
-  <div class="box_inner">
+  <div class="boxinner">
       <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Ryhmille">
 	    <h2> Ryhmille </h2>
         <img src="../activities/groups.jpg" >
