--- a/villataika.fi/en/map.html
+++ b/villataika.fi/en/map.html
@@ -5,17 +5,21 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
+  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
+  <script src="../javascripts/controls.js" type="text/javascript"></script> 
+  <script src="../javascripts/rails.js" type="text/javascript"></script> 
+  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Map" />
+  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Map" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Map</title>
+  <title>Bed & Breakfast Villa Taika : Map</title>
   
 </head>
 
@@ -25,7 +29,7 @@
 
   <div id="header">
       <div class="centre">
-        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+      <img src="../images/logo_iso.png">
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -53,7 +57,7 @@
           </li>
       </ul>
     </div>
-    <div id="menu_end"></div>
+    <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
           <span>Rooms</span>
@@ -67,9 +71,9 @@
       <div class="divider"></div>
     
         <a href="../fi/map.html" >  
-          <img src="../images/fi.gif" alt="fi"/> </a>
+          <img src="../images/fi.gif"/> </a>
         <a href="map.html" class='selected'>  
-          <img src="../images/en.gif" alt="en"/> </a>
+          <img src="../images/en.gif"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -86,6 +90,7 @@
 
   <div id="rcol">
     <div id="rcontent">
+
         <div class="left">
 <iframe width="600" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 </div>
@@ -102,9 +107,10 @@ Coming from Fiskars it is the third house on the right in the Antskog village.
 We have lakeview from both sides of the house, and there is beautiful nature around for walks.
 </div>
 
-    </div>
-    <div class="divider"></div>
+
   </div>
+  <div class="divider"></div>
+
 </div>
 
 <div id="footer">
@@ -120,7 +126,7 @@ We have lakeview from both sides of the house, and there is beautiful nature aro
   </div>
   <div class="kolmas">
     <a href="index.html">
-    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
     </a>
   </div>
 </div>
