--- a/villataika.fi/en/news.html
+++ b/villataika.fi/en/news.html
@@ -57,7 +57,7 @@
           </li>
       </ul>
     </div>
-    <div id="menu_end"></div>
+    <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
           <span>Rooms</span>
@@ -92,8 +92,8 @@
     <div id="rcontent">
 
       <div class="newsbox">
-  <div class="box_inner">
-      <div class="captioned_image">
+  <div class="boxinner">
+      <div class="captionedimage">
         <a href="../news/large/renovate.jpg" rel="lightbox" title="Affordable accommodation in redocorated granery">
           <img src="../news/renovate.jpg" height=100>
         </a>
@@ -104,8 +104,8 @@
 </div>
 <div class='line'> &nbsp;</div>
 <div class="newsbox">
-  <div class="box_inner">
-      <div class="captioned_image">
+  <div class="boxinner">
+      <div class="captionedimage">
         <a href="../news/large/renewable.jpg" rel="lightbox" title="Ecological energy.">
           <img src="../news/renewable.jpg" height=100>
         </a>
