--- a/villataika.fi/en/suites.html
+++ b/villataika.fi/en/suites.html
@@ -5,17 +5,21 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
+  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
+  <script src="../javascripts/controls.js" type="text/javascript"></script> 
+  <script src="../javascripts/rails.js" type="text/javascript"></script> 
+  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Suites (w.shower)" />
+  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Suites (w.shower)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Suites (w.shower)</title>
+  <title>Bed & Breakfast Villa Taika : Suites (w.shower)</title>
   
 </head>
 
@@ -25,7 +29,7 @@
 
   <div id="header">
       <div class="centre">
-        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+      <img src="../images/logo_iso.png">
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -53,7 +57,7 @@
           </li>
       </ul>
     </div>
-    <div id="menu_end"></div>
+    <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
           <span>Rooms</span>
@@ -67,9 +71,9 @@
       <div class="divider"></div>
     
         <a href="../fi/suites.html" >  
-          <img src="../images/fi.gif" alt="fi"/> </a>
+          <img src="../images/fi.gif"/> </a>
         <a href="suites.html" class='selected'>  
-          <img src="../images/en.gif" alt="en"/> </a>
+          <img src="../images/en.gif"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -86,11 +90,12 @@
 
   <div id="rcol">
     <div id="rcontent">
+
         <div class="box">
-    <div class="box_inner">
-      <div class="captioned_image">
+    <div class="boxinner">
+      <div class="captionedimage">
         <a href="../images/lootus.jpg" rel="lightbox[suites]" title="Lotus Suite">
-          <img src="../images/lootus_small.jpg" />
+          <img src="../images/lootus_small.jpg" >
         </a>
       </div>
       <h2> Lotus Suite </h2>
@@ -98,10 +103,10 @@
     </div>
   </div>
   <div class="box">
-    <div class="box_inner">
-      <div class="captioned_image">
+    <div class="boxinner">
+      <div class="captionedimage">
         <a href="../images/sun.jpg" rel="lightbox[suites]" title="Sun suite">
-          <img src="../images/sun_small.jpg" />
+          <img src="../images/sun_small.jpg" >
         </a>
       </div>
       <h2> Sun suite </h2>
@@ -109,10 +114,10 @@
     </div>
   </div>
   <div class="box">
-    <div class="box_inner">
-      <div class="captioned_image">
+    <div class="boxinner">
+      <div class="captionedimage">
         <a href="../images/ametist.jpg" rel="lightbox[suites]" title="Amethyst room">
-          <img src="../images/ametist_small.jpg" />
+          <img src="../images/ametist_small.jpg" >
         </a>
       </div>
       <h2> Amethyst room </h2>
@@ -120,9 +125,10 @@
     </div>
   </div>
 
-    </div>
-    <div class="divider"></div>
+
   </div>
+  <div class="divider"></div>
+
 </div>
 
 <div id="footer">
@@ -138,7 +144,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
     </a>
   </div>
 </div>
