--- a/villataika.fi/fi/deluxe.html
+++ b/villataika.fi/fi/deluxe.html
@@ -5,17 +5,21 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
+  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
+  <script src="../javascripts/controls.js" type="text/javascript"></script> 
+  <script src="../javascripts/rails.js" type="text/javascript"></script> 
+  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Deluxe (wc:llä)" />
+  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Deluxe (wc:llä)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Deluxe (wc:llä)</title>
+  <title>Bed & Breakfast Villa Taika : Deluxe (wc:llä)</title>
   
 </head>
 
@@ -25,7 +29,7 @@
 
   <div id="header">
       <div class="centre">
-        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+      <img src="../images/logo_iso.png">
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -53,7 +57,7 @@
           </li>
       </ul>
     </div>
-    <div id="menu_end"></div>
+    <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
           <span>Huoneet</span>
@@ -67,9 +71,9 @@
       <div class="divider"></div>
     
         <a href="deluxe.html" class='selected'>  
-          <img src="../images/fi.gif" alt="fi"/> </a>
+          <img src="../images/fi.gif"/> </a>
         <a href="../en/deluxe.html" >  
-          <img src="../images/en.gif" alt="en"/> </a>
+          <img src="../images/en.gif"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -86,11 +90,12 @@
 
   <div id="rcol">
     <div id="rcontent">
+
         <div class="box">
-    <div class="box_inner">
-      <div class="captioned_image">
+    <div class="boxinner">
+      <div class="captionedimage">
         <a href="../images/green.jpg" rel="lightbox[deluxe]" title="Vihreä huone">
-          <img src="../images/green_small.jpg" alt='Vihreä huone'/>
+          <img src="../images/green_small.jpg" >
         </a>
       </div>
       <h2> Vihreä huone </h2>
@@ -98,10 +103,10 @@
     </div>
   </div>
   <div class="box">
-    <div class="box_inner">
-      <div class="captioned_image">
+    <div class="boxinner">
+      <div class="captionedimage">
         <a href="../images/orange.jpg" rel="lightbox[deluxe]" title="Oranssi huone">
-          <img src="../images/orange_small.jpg" alt='Oranssi huone'/>
+          <img src="../images/orange_small.jpg" >
         </a>
       </div>
       <h2> Oranssi huone </h2>
@@ -109,9 +114,10 @@
     </div>
   </div>
 
-    </div>
-    <div class="divider"></div>
+
   </div>
+  <div class="divider"></div>
+
 </div>
 
 <div id="footer">
@@ -127,7 +133,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
     </a>
   </div>
 </div>
