--- a/villataika.fi/fi/index.html
+++ b/villataika.fi/fi/index.html
@@ -5,17 +5,21 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
+  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
+  <script src="../javascripts/controls.js" type="text/javascript"></script> 
+  <script src="../javascripts/rails.js" type="text/javascript"></script> 
+  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Kotisivu" />
+  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Kotisivu" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Kotisivu</title>
+  <title>Bed & Breakfast Villa Taika : Kotisivu</title>
   
 </head>
 
@@ -25,7 +29,7 @@
 
   <div id="header">
       <div class="centre">
-        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+      <img src="../images/logo_iso.png">
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -53,7 +57,7 @@
           </li>
       </ul>
     </div>
-    <div id="menu_end"></div>
+    <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
           <span>Huoneet</span>
@@ -67,9 +71,9 @@
       <div class="divider"></div>
     
         <a href="index.html" class='selected'>  
-          <img src="../images/fi.gif" alt="fi"/> </a>
+          <img src="../images/fi.gif"/> </a>
         <a href="../en/index.html" >  
-          <img src="../images/en.gif" alt="en"/> </a>
+          <img src="../images/en.gif"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -86,13 +90,14 @@
 
   <div id="rcol">
     <div id="rcontent">
+
       <div id="lotus">
   <a href='suites.html'>
    <img alt='Aurinko sviitti' border='0' height='414' src='../images/aurinko.jpg' valign='top' width='312' />
   </a>
 </div>
 
-<div id="aurinko_wrapper">
+<div id="aurinkowrapper">
   
   <div id="aurinko">
     <a href='suites.html'>
@@ -109,11 +114,11 @@
     </div>
   </div>
 
-  <div id="main_text">
+  <div id="maintext">
     Taianomaista tyylikkyyttä Aasiasta ja luonnonkauniin ympäristön rauhaa.
 
   </div>
-  <div class="sub_text">
+  <div class="subtext">
     <strong> Villa Taika </strong> 
     on kaunis ja viehättävä Bed&amp;Breakfast -paikka sekä kurssikeskus Antskogissa, 4,5 km Fiskarsista Karjalohjalle päin.
   </div>
@@ -121,9 +126,10 @@
 
 
 
-    </div>
-    <div class="divider"></div>
+
   </div>
+  <div class="divider"></div>
+
 </div>
 
 <div id="footer">
@@ -139,7 +145,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
     </a>
   </div>
 </div>
