--- a/villataika.fi/fi/photos.html
+++ b/villataika.fi/fi/photos.html
@@ -57,7 +57,7 @@
           </li>
       </ul>
     </div>
-    <div id="menu_end"></div>
+    <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
           <span>Huoneet</span>
